<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFAFE"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="293dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@id/marginRight"
        app:layout_constraintStart_toStartOf="@id/marginLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.72"
        android:padding="20dp"
        android:paddingTop="20dp"
        android:background="@color/white"
        app:cardElevation="20dp">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/mona_lisa"
            android:layout_margin="30dp"/>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/name_of_the_picture"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:text="@string/name_of_the_picture"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/marginRight"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/marginLeft"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <TextView
        android:id="@+id/name_of_the_creator"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="15dp"
        android:paddingBottom="10dp"
        android:text="@string/name_of_the_creature"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/name_of_the_picture"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/marginLeft"
        app:layout_constraintTop_toBottomOf="@id/name_of_the_picture" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="sans-serif"
        android:paddingStart="4dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/year"
        android:textColor="#717171"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/marginRight"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/name_of_the_creator"
        app:layout_constraintTop_toBottomOf="@id/name_of_the_picture" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/gray"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/name_of_the_creator"
        app:layout_constraintEnd_toEndOf="@id/marginRight"
        app:layout_constraintStart_toStartOf="@+id/marginLeft"
        app:layout_constraintTop_toTopOf="@+id/name_of_the_picture" />

    <Button
        android:id="@+id/previous"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/marginLeft"
        />

    <Button
        android:id="@+id/next"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/marginRight" />



</androidx.constraintlayout.widget.ConstraintLayout>